# scribe

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  roadmap-v2.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml
benchmark/: RESULTS.md  full-run-2026-07-10.json  suite-smoke.toml  suite.toml  variance-run-2026-07-17.json
benchmark/suite/: 02-boolean-check.toml  04-equality-check.toml  05-add-gate.toml  06-mul-gate.toml  08-poseidon-sbox.toml  09-poseidon-sbox-7.toml  10-swap-gate.toml  11-is-zero.toml  12-polynomial-eval.toml  14-weierstrass-add.toml  15-inner-product.toml  16-neg-underconstrained-range.toml  17-neg-vacuous-constraint.toml  18-neg-is-zero-missing-constraint.toml  19-neg-swap-unconstrained-output.toml  20-neg-wrong-inverse-constraint.toml
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/gadget-ir/: Cargo.toml
crates/gadget-ir/src/: lib.rs
crates/halva-bridge/: Cargo.toml
crates/halva-bridge/src/: lib.rs  main.rs
crates/lean-emit/: Cargo.toml
crates/lean-emit/src/: lib.rs  main.rs
crates/proof-pilot/: Cargo.toml  README.md
crates/proof-pilot/examples/: prove_sum_comm.rs
crates/proof-pilot/prompts/: lean-prover.md
crates/proof-pilot/scripts/: lsp-server.py
crates/proof-pilot/src/: backend.rs  journal.rs  lean_runner.rs  lib.rs  lsp_feedback.rs  main.rs  notes.rs  patcher.rs  replay.rs  session.rs  transcript.rs
crates/r1cs-front/: Cargo.toml
crates/r1cs-front/examples/: gen_fixtures.rs
crates/r1cs-front/src/: lib.rs
crates/scribe-cli/: Cargo.toml
crates/scribe-cli/src/: extract.rs  init.rs  main.rs  orchestrate.rs
docs/: architecture.md  why.md
examples/conditional-select/: gadget.toml
examples/edwards-addition/: gadget.toml
examples/halva-binary-number/: spec.lean
examples/halva-fibonacci/: spec.lean
examples/halva-range-check/: spec.lean
examples/nonzero-check/: gadget.toml
examples/range-check/: gadget.toml
lean/: ZkGadgets.lean  lake-manifest.json  lakefile.toml
lean/ZkGadgets/: Audit.lean  ConditionalSelect.lean  EdwardsAddition.lean  Field.lean  HalvaBinaryNumber.lean  HalvaFibonacci.lean  HalvaRangeCheck.lean  NonzeroCheck.lean  PoseidonSbox.lean  RangeCheck.lean
prompts/: lean-prover.md  lean-refuter.md
scripts/: lsp-server.py
transcripts/: poseidon-sbox.md
