[package]
name = "zkgadget-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmark runner for ZK gadget proof completion"

[[bin]]
name = "zkgadget-eval"
path = "src/main.rs"

[dependencies]
gadget-ir = { path = "../gadget-ir" }
lean-emit = { path = "../lean-emit" }
proof-pilot = { path = "../proof-pilot" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
