[package]
name = "scribe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "scribe — unified CLI for ZK gadget formal verification (P1 verify + P2 demo)"

[[bin]]
name = "scribe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
gadget-ir = { path = "../gadget-ir" }
halva-bridge = { path = "../halva-bridge" }
lean-emit = { path = "../lean-emit" }
r1cs-front = { path = "../r1cs-front" }
toml = "0.8"
proof-pilot = { path = "../proof-pilot" }
